--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -19,6 +19,8 @@
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
     <link href="{{ ASSET_PATH }}/css/style-pygment.css?body=1" rel="stylesheet" type="text/css" media="all">
 
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+
     <!-- Le fav and touch icons -->
   <!-- Update these with your own images
     <link rel="shortcut icon" href="images/favicon.ico">
@@ -42,6 +44,7 @@
             {% assign pages_list = site.pages %}
             {% assign group = 'navigation' %}
             {% include JB/pages_list %}
+            <li><a href="{{ BASE_PATH }}about.html">about</a></li>
           </ul>
         </div>
       </div>
