edit footer + some articles

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -58,8 +58,9 @@
       <hr>
       <footer>
         <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
-          with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-          and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
+          based on <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
+          , hosted on <a href="http://www.github.io" target="_blank">Github page</a>
+          <i class="fa fa-heart"></i>
         </p>
       </footer>
 
