change link for github page in footer

--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -59,7 +59,7 @@
       <footer>
         <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
           based on <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-          , hosted on <a href="http://www.github.io" target="_blank">Github page</a>
+          , hosted on <a href="https://pages.github.com/" target="_blank">Github page</a>
           <i class="fa fa-heart"></i>
         </p>
       </footer>
